custom.css
#browser:not(.fullscreen).mac #header {
    min-height: 34px;
}

#browser:not(.fullscreen) #main {
    overflow: initial;
    position: absolute;
    left: 0;
    right: 0;
    top: 64px;
    height: calc(100% - 64px);
}

#browser:not(.fullscreen) #titlebar {
    margin-top: -3px;
}

#browser:not(.fullscreen) #titlebar .window-buttongroup {
    z-index: 1;
}

.mac#browser:not(.fullscreen).popup #titlebar, .mac#browser:not(.fullscreen).popup #header, .mac#browser:not(.fullscreen).popup .settings-header {
    height: 34px;
    line-height: 34px;
}

#browser.mac #titlebar.tabless .window-buttongroup {
    margin-top: 13px;
}

#browser:not(.fullscreen) .toolbar.toolbar-addressbar.toolbar-mainbar {
    position: absolute;
    left: 0;
    right: 0;
    top: -64px;;
    display: flex;
    justify-content: center;
}

#browser:not(.fullscreen) .SiteInfoButton.certified {
    fill: #48ff7e;
    color: #48ff7e;
}

#browser:not(.fullscreen) .addressfield {
    max-width: 600px;
}

#browser:not(.fullscreen) .addressfield .pageload {
    color: var(--colorAccentFgFaded);
}

#browser:not(.fullscreen) .UrlBar-UrlField {
    font-size: 12.2px;
}

#browser:not(.fullscreen):not(.is-settingspage) .UrlBar-UrlField::selection {
    background: var(--colorAccentBgDarker);
    color: var(--colorAccentFg);
}

/* #browser:not(.fullscreen).theme-dark.hasfocus .UrlBar-UrlField:not(:focus) {
    color: rgba(255, 255, 255, 0.7);
}

#browser:not(.fullscreen).theme-dark.isblurred .UrlBar-UrlField {
    color: rgba(255, 255, 255, 0.45);
} */

/* .theme-dark .addressfield, .theme-dark .searchfield {
    border: 1px solid rgba(0,0,0,0.6);
    background-color: rgba(0,0,0,0.6);
} */

.extension-popup, .button-popup, .OmniDropdown {
    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1), 0 5px 25px rgba(0, 0, 0, 0.2);
}

.OmniDropdown {
    background: var(--colorBgAlpha);
    backdrop-filter: blur(35px);
}

#modal-bg {
    background-color: var(--colorBgAlpha);
    backdrop-filter: blur(35px);
}

/* Sets the background color to any non-selected 
 * element of the quick command menu to transparent */
 #modal-bg *:not([data-selected]) {
     background-color: rgba(0,0,0,0)!important;
 }

#browser:not(.fullscreen) #tabs-container {
    position: absolute;
    top: 34px;
    left: 0;
    right: 0;
    padding: 0;
}

#browser:not(.fullscreen) .toolbar-tabbar .newtab > button svg {
    fill: var(--colorAccentFg);
}

#browser:not(.fullscreen) .mac #tabs-container.top {
    padding-left: 0;
}

#browser:not(.fullscreen) .tab-position .tab .tab-header {
    border-bottom: 1px solid var(--colorBorder);
}

#browser:not(.fullscreen) .tab-position .tab .close svg {
    fill: var(--colorAccentFg);
}

#browser:not(.fullscreen).theme-light .tab-position .tab:hover:not(.active) {
    background-color: var(--colorFgAlpha);
}

#browser:not(.fullscreen).theme-light .tab-position .tab:not(.active) .tab-header .title {
    color: var(--colorAccentFgFaded);
}

#browser:not(.fullscreen).theme-light .tab-position .tab:hover:not(.active) .tab-header .title {
    color: var(--colorAccentFg);
}

/* .theme-light .addressfield, .theme-light .searchfield {
    border: 1px solid rgba(255, 255, 255, 0.55);
    background-color: rgba(255, 255, 255, 0.4);
} */

#browser:not(.fullscreen).isblurred .tab-strip, #browser:not(.fullscreen).isblurred .toolbar-tabbar > .button-toolbar.toggle-trash {
    background: var(--colorAccentBgDark);
}

#browser:not(.fullscreen) .tab-strip, #browser:not(.fullscreen) .toolbar-tabbar > .button-toolbar.toggle-trash {
    background: var(--colorAccentBorderDark);
}

#browser:not(.fullscreen):not(.is-settingspage) .button-toolbar.toggle-trash > button svg, .button-toolbar > button img, .SiteInfoButton.secure {
    fill: var(--colorAccentFgFaded);
}

#browser:not(.fullscreen):not(.is-settingspage) #panels .button-toolbar > button svg,
#browser:not(.fullscreen):not(.is-settingspage) .find-in-page.toolbar .button-toolbar > button svg {
    fill: var(--colorFg);
}

#browser:not(.fullscreen) .tab-group-indicator {
    top: 0;
    padding: 0;
}

#browser:not(.fullscreen) .tab-indicator {
    height: 2px;
    cursor: pointer;
    border: 0;
    border-bottom: 1px solid var(--colorAccentBg);
}

#browser:not(.fullscreen) .tab-indicator.active {
    height: 3px;
    border: 0;
    border-bottom: 2px solid var(--colorAccentBg);
}

#browser:not(.fullscreen).tabs-top .tab-position .tab {
    border-radius: 0;
}

#browser:not(.fullscreen) .tab-position .tab .tab-header {
    border-bottom: 1px solid rgba(0,0,0,0.15);
}

#browser:not(.fullscreen) .color-behind-tabs-on .tab.active .tab-indicator.active {
    background-color: var(--colorAccentBgFadedMost);
}

#browser:not(.fullscreen) .color-behind-tabs-off .tab.active .tab-indicator.active {
    background-color: var(--colorAccentBgFadedMost);
}

.startpage {
    background-color: #f6f6f6 !important;
}

@media (prefers-color-scheme: dark) {
    .startpage {
        background-color: rgb(12, 16, 18) !important;
    }
}

.tab.active:not(.marked):not(.tab-mini):before,
.tab.active:not(.marked):not(.tab-mini):after,
.startpage .startpage-content .searchfield {
    display: none;
}

.startpage .startpage-navigation .startpage-navigation-group {
    border-left: 0;
}

.startpage .startpage-navigation .startpage-navigation-group .button-startpage:hover {
    background: rgba(0,0,0,0.3);
}

button.button-startpage:after {
    display: none;
}

.thumbnail-image {
    box-shadow: 0px 10px 50px -15px rgba(0,0,0,0.2) !important;
}

#switch {
    background-color: var(--colorBg);
}

.right#panels-container.overlay .panel-group {
    box-shadow: -20px 0 50px -14px rgb(0, 0, 0, 0.18);
}

.left#panels-container.overlay .panel-group {
    box-shadow: 20px 0 50px -14px rgb(0, 0, 0, 0.18);
}

#panels-container.left #switch {
    box-shadow: inset -8px 0 20px -8px var(--colorBorder);
}

#panels-container.right #switch {
    box-shadow: inset 8px 0 20px -8px var(--colorBorder);
}

#panels .webpanel-stack .webpanel .webpanel-header {
    order: 2;
}z

#panels .webpanel-stack .webpanel .webpanel-content {
    order: 1;
}

#panels h1.webpanel-title {
    font-size: 14px;
}

#switch button.webviewbtn img {
    padding: 1px;
}

.theme-dark #switch button.webviewbtn img {
    background-color: transparent;
}

#browser:not(.fullscreen).mac .toolbar-statusbar {
    position: absolute;
    width: 50%;
    min-width: 480px;
    height: auto;
    border-radius: var(--radius);
    padding: 6px;
    right: 30px;
    bottom: 30px;
    background: var(--colorBgAlphaHeavy);
    backdrop-filter: blur(10px);
    border: 1px solid rgba(0,0,0,0.15);
    box-shadow: 0 8px 25px -10px rgba(0,0,0,0.2);
}

#browser:not(.fullscreen).mac.theme-dark .toolbar-statusbar {
    background: var(--colorBgAlpha);
}

@media (max-width: 1200px) {
    #browser:not(.fullscreen) .addressfield {
        max-width: 460px;
    }
}

@media (max-width: 960px) {
    #browser:not(.fullscreen) .addressfield {
        max-width: 340px;
    }
}

@media (max-width: 840px) {
    #browser:not(.fullscreen) .addressfield {
        max-width: 240px;
    }
}

@media (max-width: 700px) {
    #browser:not(.fullscreen) .toolbar.toolbar-addressbar.toolbar-mainbar {
        justify-content: flex-end;
    }
}

@media (max-width: 620px) {
    #browser:not(.fullscreen) .toolbar.toolbar-mainbar.toolbar-extensions {
        display: none;
    }
}

/* fancy experiments */
#browser:not(.fullscreen):not(.is-settingspage) .addressfield {
    background-color: transparent;
    border: 0;
}

#browser:not(.fullscreen):not(.is-settingspage) .addressfield:focus-within {
    background: var(--colorAccentBg);
    color: var(--colorAccentFg);
}

#browser:not(.fullscreen):not(.is-settingspage) .UrlBar-UrlField {
    color: var(--colorAccentFg);
}

#browser:not(.fullscreen):not(.is-settingspage) .UrlBar-UrlField:not(:focus) {
    text-align: center;
}

#browser:not(.fullscreen):not(.is-settingspage) .button-toolbar > button svg, .button-toolbar > button img,
.SiteInfoButton.secure {
    fill: var(--colorAccentFg);
}

#browser:not(.fullscreen):not(.is-settingspage) .toolbar-insideinput.toolbar-insideinput.toolbar-insideinput > .button-toolbar button, .toolbar-insideinput.toolbar-insideinput.toolbar-insideinput > .toolbar-group > .button-toolbar button {
    margin-top: 1px;
}

#browser:not(.fullscreen):not(.is-settingspage) .toolbar-insideinput.toolbar-insideinput.toolbar-insideinput > .button-toolbar button.button-pressed, .toolbar-insideinput.toolbar-insideinput.toolbar-insideinput > .toolbar-group > .button-toolbar button.button-pressed {
    background-color: var(--colorAccentBgDark);
    border-color: var(--colorAccentBorderDark);
    color: var(--colorFg);
}

#browser:not(.fullscreen):not(.is-settingspage) .toolbar-mainbar > .button-toolbar > button svg:first-child, .toolbar-mainbar > .toolbar-group > .button-toolbar > button svg:first-child, .toolbar-mainbar > .button-toolbar > button img:first-child, .toolbar-mainbar > .toolbar-group > .button-toolbar > button img:first-child {
    flex: 0 0 22px;
    height: 22px;
}

#browser:not(.fullscreen):not(.is-settingspage) .toolbar-mainbar > .button-toolbar.profile-popup > button img:first-child {
    flex: 0 0 20px;
    height: 20px;
    width: 20px;
}

#browser:not(.fullscreen):not(.is-settingspage) .toolbar-mainbar > .button-toolbar > button, .toolbar-mainbar > .toolbar-group > .button-toolbar > button {
    min-width: 30px;
}

#browser:not(.fullscreen):not(.is-settingspage) .tab-position .tab .favicon {
    background: rgba(255, 255, 255, 0.45);
}

#browser:not(.fullscreen):not(.is-settingspage).theme-dark .tab-position .tab.active .tab-header .favicon {
    filter: none;
}

